[project]
name = "data-product-hub"
description = "Composite MCP server for data product quality assessment and AI agent integration"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-snowflake~=1.4",
    "openai>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pyyaml~=6.0",
    "markdown2~=2.4",
    "pyvis~=0.3.2",
    "plotly~=5.14",
    "numpy~=1.24",
    "fastmcp==2.11.3",
]

[project.scripts]
data-product-hub = "data_product_hub.main:main"
dph = "data_product_hub.main:main"

[project.optional-dependencies]
dev = [
    "black~=23.1",
    "build~=0.10",
    "pre-commit~=3.0",
    "ruff~=0.0.254",
    "twine~=4.0",
    "pytest~=7.3",
]

[build-system]
requires = ["setuptools~=66.1", "wheel~=0.37"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

# use PyCharm default line length of 120
[tool.black]
line-length = 120
exclude = "conftest.py"

[tool.ruff]
line-length = 120

# rules to enable/ignore
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # type annotations
    "ANN",
    # pep8-naming
    "N",
    # bugbear
    "B",
    # isort
    "I",
    # flake8-unused-arguments
    "ARG",
    # flake8-self
    "SLF",
    # ruff-specific
    "RUF",
]
ignore = [
    # allow untyped self and cls args, and no return type from dunder methods
    "ANN101",
    "ANN102",
    "ANN204",
    # allow == True because pandas dataframes overload equality
    "E712",
]
# first-party imports for sorting
src = ["."]
fix = true
show-fixes = true

[tool.ruff.per-file-ignores]
# imports in __init__.py don't need to be used in __init__.py
"__init__.py" = ["F401"]
# test functions don't need return types
"tests/*" = ["ANN201", "ANN202"]

[tool.ruff.flake8-annotations]
# allow *args: Any, **kwargs: Any
allow-star-arg-any = true
